<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PopupMenu</string>
    <string name="action_settings">Settings</string>
    <string name="btn_button">Click me!</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="copy">Copy</string>
    <string name="cut">Cut</string>
    <string name="paste">Paster</string>
    <string name="dismiss">Dismiss</string>

</resources>
