<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item 
        android:id="@+id/search"
        android:title="@string/search" />
    <item
        android:id="@+id/add"
        android:title="@string/add" />
    <item
        android:id="@+id/edit"
        android:title="@string/edit" >
        <menu>
            <item 
                android:id="@+id/copy"
                android:title="@string/copy" />
            <item 
                android:id="@+id/cut"
                android:title="@string/cut" />
            <item
                android:id="@+id/paste"
                android:title="@string/paste" />
        </menu>
    </item>
    <item 
        android:id="@+id/dismiss"
        android:title="@string/dismiss" />
</menu>
